# Heco

./: CMakeLists.txt  CMakePresets.json  Heco.cpp  README.md
inc/: test.h
scripts/: main.cpp
src/: test.cpp
